@@ -1,3 +1,7 @@
+* 2013-08-19 - thorben.betten@open-xchange.com
+
+ - Fix for bug 24629: Preload folder names on root subfolder retrieval
+
 * 2013-08-16 - jan.bauerdick@open-xchange.com
 
  - Fix for bug 28350: Check if another distribution list with same name already exists
